# embedded

./: Cargo.toml  README.md
.devcontainer/: Dockerfile  devcontainer.json  influxdb3
.github/workflows/: clang-tidy.yml  cpp-linter.yml  pio-linter.yml  test.yml
FSAE-macro/: Cargo.toml
FSAE-macro/src/: lib.rs
FSAE-raspi/: Cargo.toml
FSAE-raspi/src/: can.rs  main.rs  messages.rs  uart.rs
fase-raspi-isotp/: Cargo.toml
fase-raspi-isotp/src/: main.rs
fsae-arduino/: platformio.ini
fsae-arduino/src/: lowpass.h  main.cpp
fsae-candump/src/: main.c  main.cpp
fsae-candump/zephyr/: CMakeLists.txt  prj.conf
fsae-dashboard/: Cargo.toml
fsae-dashboard/src/: consts.rs  main.rs  mqtt.rs  palette.rs  pallate.rs  util.rs
fsae-gps/: Cargo.toml
fsae-gps/src/: main.rs  mqtt.rs  telemetry.rs  track.rs  types.rs
fsae-pcc/: platformio.ini
fsae-pcc/include/: callbacks.h  gpio.h  moving-average.h  precharge.h  states.h
fsae-pcc/src/: callbacks.cpp  can.cpp  can.h  gpio.cpp  gpio.h  main.cpp  moving-average.cpp  pcc.cpp  pcc.h  precharge.cpp  precharge.h  utils.h
fsae-raspi/: Cargo.toml  add_network.sh  add_service.sh  fsae-raspi.service  install.sh  rumqttd.toml
fsae-raspi/.github/workflows/: test.yml
fsae-raspi/scripts/: setup_vcan  setup_vcan.rs
fsae-raspi/src/: can.rs  influx.rs  influxdb.rs  lib.rs  main.rs  mqtt.rs  send.rs  test.rs  uart.rs  utils.rs
fsae-raspi/src/test/: listener.rs
fsae-spedometer/: Cargo.toml
fsae-spedometer/src/: dummy.rs  main.rs  pallate.rs
fsae-vehicle-fw/: platformio.ini
fsae-wireless-test/: Cargo.toml
(+86 files in other folders)
