[package]
name = "fsae-raspi"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
socketcan = { version = "3.5", features = ["tokio"] }
futures-util = "0.3"
tokio = { version = "1.43", features = ["full"] }
influxdb = { version = "0.7", features = ["derive"] }
tokio-serial = "5.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rumqttc = "0.24"
rumqttd = "0.19"
tracing-subscriber = "0.3"
config = "0.15"
once_cell="1.20"