[package]
name = "fsae-raspi"
version = "0.1.0"
edition = "2021"

[dependencies]
influxdb3_client = { git = "https://github.com/influxdata/influxdb" }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.43", features = ["full"] }
influxdb = { version = "0.7", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing-subscriber = "0.3"
config = "0.15"
rumqttc = "0.25"
rumqttd = "0.20"
once_cell = "1.20"
tokio-socketcan-isotp = "0.2.0"
