[package]
name = "fsae-raspi"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = "0.12"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-socketcan-isotp = "0.2.0"
tracing-subscriber = "0.3"
config = "0.15"
rumqttc = "0.25"
rumqttd = "0.20"
bincode = { version = "2", features = ["serde"] }
